--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,16 +1,15 @@
-@import 'variables.scss' ;
+@import "variables.scss";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  line-height : 1;
+  line-height: 1;
 }
 
 ul {
   list-style: none;
 }
-
 
 img {
   max-inline-size: 100%;
@@ -30,7 +29,7 @@ button,
   background-color: $button_primary_bg;
   color: $button_primary_text_color;
   padding: $button_primary_padding;
-  transition: background-color .4s ease;
+  transition: background-color 0.4s ease;
 
   &:hover {
     background-color: $button_primary_active_bg;
